Updated description day 22, and minor refactoring